Fix for doc typeahead field being hidden
When typing a doc name in the Doc ID field on the Database -> All
Docs page, it would get cut off. This PR ensures it overlaps
the body content.

--- a/assets/less/layouts.less
+++ b/assets/less/layouts.less
@@ -48,11 +48,6 @@ body #notification-center .flex-layout {
 body #dashboard .flex-body, body #notification-center .flex-body {
   .flex(1);
   overflow: auto;
-
-  /* yet more stuff that can be removed at end */
-  &.right-header-wrapper {
-    overflow: hidden;
-  }
 }
 
 /* tells an element to be as large as the content. This will replace the hardcoded ones */
@@ -71,8 +66,6 @@ body #dashboard .flex-fill {
 /* this drops .fixed-header, which was a position:absolute'd element, and switches it and all children to use flexbox. */
 .one-pane > header {
   width: 100%;
-
-//  .bottom-shadow-border();
 
   #breadcrumbs {
     overflow: hidden;
